Avoid errors when creating NavigationHelper without servlet context